force-app/main/default/objects/LoyaltyTransaction__c/LoyaltyTransaction__c.object-meta.xml
<CustomObject>
    <label>Loyalty Transaction</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Loyalty ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>