force-app/main/default/objects/LoyaltyTransaction__c/fields/Adjustment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Fee__c</fullName>
    <label>Adjustment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>