force-app/main/default/objects/LoyaltyTransaction__c/fields/Adjustment_Refund__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Refund__c</fullName>
    <label>Adjustment Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>