force-app/main/default/objects/LoyaltyTransaction__c/fields/GatewaySentOn__c.field-meta.xml
<CustomField>
    <fullName>GatewaySentOn__c</fullName>
    <label>Gateway Sent On</label>
    <type>DateTime</type>
</CustomField>