force-app/main/default/objects/LoyaltyTransaction__c/fields/GatewayStatus__c.field-meta.xml
<CustomField>
    <fullName>GatewayStatus__c</fullName>
    <label>Gateway Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>