force-app/main/default/objects/LoyaltyTransaction__c/fields/Item_Tax__c.field-meta.xml
<CustomField>
    <fullName>Item_Tax__c</fullName>
    <label>Item Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>