force-app/main/default/objects/LoyaltyTransaction__c/fields/Item_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Item_Total_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Item Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>