force-app/main/default/objects/LoyaltyTransaction__c/fields/OrderSummary__c.field-meta.xml
<CustomField>
    <fullName>OrderSummary__c</fullName>
    <label>Order Summary</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>Loyatly Transactions</relationshipLabel>
    <relationshipName>LoyatlyTransactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>