force-app/main/default/objects/LoyaltyTransaction__c/fields/Refund_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Total_Amount__c</fullName>
    <label>Refund Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>