force-app/main/default/objects/LoyaltyTransaction__c/fields/Shipping_Tax__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Tax__c</fullName>
    <label>Shipping Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>